# CmakePythonLib

./: .gitignore  CMakeLists.txt  setup.py  setup.py.in  test1.cpp
module/: timestamp.py
